Fixed the AWS tests with Java 17