@@ -200,7 +200,14 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <argLine>--add-exports jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED</argLine>
+              <argLine>
+                --add-exports java.base/sun.net.www=ALL-UNNAMED
+                --add-exports java.base/sun.net.www.protocol.http=ALL-UNNAMED
+                --add-exports java.base/sun.net.www.protocol.https=ALL-UNNAMED
+                --add-exports jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED
+                --add-opens java.base/sun.net.www.protocol.http=ALL-UNNAMED
+                --add-opens java.base/sun.net.www.protocol.https=ALL-UNNAMED
+              </argLine>
             </configuration>
           </plugin>
         </plugins>
